# Terminal-Pet

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  ascii_art.rs  event.rs  main.rs  pet.rs  save.rs  ui.rs
src/app/: handlers.rs  mod.rs
src/core/: ascii_art.rs  event.rs  mod.rs  pet.rs  save.rs  theme.rs
src/ui/: help.rs  home.rs  menus.rs  mod.rs  utils.rs
