[package]
name = "terminal-pet"
version = "0.1.0"
edition = "2021"
description = "A virtual pet caring CLI application"
authors = ["Terminal Pet"]

[[bin]]
name = "terminal-pet"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dirs = "5.0"
